Fix gaps in table on contributors page
Removed gaps between items in "table" when someone's name was longer than 1 line

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -64,7 +64,8 @@ a:hover {
 }
 .box {
   position: relative;
-  display: table;
+  display: flex;
+  flex-wrap: wrap;
 }
 .box-item {
   position: relative;
